@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=com.nokia.HildonHome
+Exec=@prefix@/bin/hildon-home
